Bug 94607 - [APL/KBL][Media][VPP 10bit]Sharpening failed with green screen
Summary: [APL/KBL][Media][VPP 10bit]Sharpening failed with green screen
Status: RESOLVED FIXED
Alias: None
Product: libva
Classification: Unclassified
Component: intel (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: medium normal
Assignee: PengChen
QA Contact: Sean V Kelley
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-03-18 01:57 UTC by lu hua
Modified: 2016-08-24 07:46 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
output (136.78 KB, image/jpeg)
2016-03-18 01:57 UTC, lu hua
Details
patch to fix this issue (19.81 KB, application/mbox)
2016-08-23 05:29 UTC, PengChen
Details

Description lu hua 2016-03-18 01:57:29 UTC
Created attachment 122397 [details]
output

Environment:
--------------
Libva:  (libva-1.7.0.pre1)35f14479760a7ff9f5e3e89ac59b8ddbb8934800
Libva_intel_driver:  (libva-1.7.0.pre1) ab8e4e36dce63c23786f2a1dc010edd621b49de1
Kernel:   (drm-intel-testing)2016-02-29
Xf86-video-intel:  (master) d1672806a5222f00dcc2eb24ccddd03f727f71bc
Xorg/xserver:  1.18.1


Reproduce steps:
--------------
./videoprocess Sharpening_factor0.cfg,  then play the yv12 file, the screen is green. find the details in the attachment.
set Sharpening parameters: SHARPENING_INTENSITY: 0/3/6/9, they all have this issue.
Comment 1 lu hua 2016-03-18 02:03:35 UTC
Only 10 bit clip has this issue. 8 bit clip is ok.
Comment 2 PengChen 2016-08-23 05:29:31 UTC
Created attachment 125970 [details]
patch to fix this issue

patch to fix this issue
Comment 3 haihao 2016-08-24 07:46:23 UTC
commit 1817beeb939bfbe57c33cf2d763e04128ba87933
Author: peng.chen <peng.c.chen@intel.com>
Date:   Tue Aug 23 13:25:01 2016 +0800

    Add the write_enabled flag of GPE media surface state


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.