Add the write_enabled flag of GPE media surface state

Fix this issue: https://bugs.freedesktop.org/show_bug.cgi?id=94607

Signed-off-by: peng.chen <peng.c.chen@intel.com>
(cherry picked from commit 1817beeb939bfbe57c33cf2d763e04128ba87933)