src/i965_gpe_utils.h
@@ -257,7 +257,8 @@ void i965_gpe_media_rw_surface_setup(VADriverContextP ctx,
                                      struct i965_gpe_context *gpe_context,
                                      struct object_surface *obj_surface,
                                      unsigned long binding_table_offset,
-                                     unsigned long surface_state_offset);
+                                     unsigned long surface_state_offset,
+                                     int write_enabled);
 void i965_gpe_buffer_suface_setup(VADriverContextP ctx,
                                   struct i965_gpe_context *gpe_context,
                                   struct i965_buffer_surface *buffer_surface,
@@ -272,7 +273,8 @@ void gen7_gpe_media_rw_surface_setup(VADriverContextP ctx,
                                      struct i965_gpe_context *gpe_context,
                                      struct object_surface *obj_surface,
                                      unsigned long binding_table_offset,
-                                     unsigned long surface_state_offset);
+                                     unsigned long surface_state_offset,
+                                     int write_enabled);
 void gen7_gpe_buffer_suface_setup(VADriverContextP ctx,
                                   struct i965_gpe_context *gpe_context,
                                   struct i965_buffer_surface *buffer_surface,
@@ -282,7 +284,8 @@ void gen75_gpe_media_chroma_surface_setup(VADriverContextP ctx,
                                      struct i965_gpe_context *gpe_context,
                                      struct object_surface *obj_surface,
                                      unsigned long binding_table_offset,
-                                     unsigned long surface_state_offset);
+                                     unsigned long surface_state_offset,
+                                     int write_enabled);
 
 extern void gen8_gpe_surface2_setup(VADriverContextP ctx,
                              struct i965_gpe_context *gpe_context,
@@ -293,7 +296,8 @@ extern void gen8_gpe_media_rw_surface_setup(VADriverContextP ctx,
                                      struct i965_gpe_context *gpe_context,
                                      struct object_surface *obj_surface,
                                      unsigned long binding_table_offset,
-                                     unsigned long surface_state_offset);
+                                     unsigned long surface_state_offset,
+                                     int write_enabled);
 extern void gen8_gpe_buffer_suface_setup(VADriverContextP ctx,
                                   struct i965_gpe_context *gpe_context,
                                   struct i965_buffer_surface *buffer_surface,
@@ -303,7 +307,8 @@ extern void gen8_gpe_media_chroma_surface_setup(VADriverContextP ctx,
                                      struct i965_gpe_context *gpe_context,
                                      struct object_surface *obj_surface,
                                      unsigned long binding_table_offset,
-                                     unsigned long surface_state_offset);
+                                     unsigned long surface_state_offset,
+                                     int write_enabled);
 
 void gen8_gpe_pipeline_setup(VADriverContextP ctx,
                              struct i965_gpe_context *gpe_context,
